--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,17 +4,6 @@ version = "0.1.0"
 description = ""
 authors = ["voightp <vojtechpanek@seznam.cz>"]
 
-[tool.poetry.dependencies]
-python = "^3.8"
-
-[tool.poetry.dev-dependencies]
-black = "^21.10b0"
-flake8 = "^4.0.1"
-pre-commit = "^2.15.0"
-isort = "^5.10.1"
-pylint = "^2.11.1"
-psutil = "^5.9.0"
-
 [tool.black]
 line-length = 88
 
@@ -22,5 +11,5 @@ line-length = 88
 profile = "black"
 
 [build-system]
-requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.core.masonry.api"
+requires = ["setuptools>=61.0"]
+build-backend = "setuptools.build_meta"
