--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = ""
 authors = ["voightp <vojtechpanek@seznam.cz>"]
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = "^3.8, <=3.13"
 
 [tool.poetry.dev-dependencies]
 black = "^21.10b0"
@@ -14,6 +14,9 @@ pre-commit = "^2.15.0"
 isort = "^5.10.1"
 pylint = "^2.11.1"
 psutil = "^5.9.0"
+
+[tool.poetry.group.dev.dependencies]
+pyinstaller = "^6.11.1"
 
 [tool.black]
 line-length = 88
