--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,18 +5,14 @@ description = ""
 authors = ["voightp <vojtechpanek@seznam.cz>"]
 
 [tool.poetry.dependencies]
-python = "^3.8, <=3.13"
-
-[tool.poetry.dev-dependencies]
-black = "^21.10b0"
-flake8 = "^4.0.1"
-pre-commit = "^2.15.0"
-isort = "^5.10.1"
-pylint = "^2.11.1"
-psutil = "^5.9.0"
+python = ">=3.10, <=3.13"
 
 [tool.poetry.group.dev.dependencies]
 pyinstaller = "^6.11.1"
+black = "^24.10.0"
+flake8 = "^7.1.1"
+isort = "^5.13.2"
+pre-commit = "^4.0.1"
 
 [tool.black]
 line-length = 88
