temporarily disable pylint

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -15,14 +15,14 @@ repos:
         name: ruff-format
 
   # Pylint for additional static analysis
-  - repo: local
-    hooks:
-      - id: pylint
-        name: pylint
-        entry: uv run pylint
-        language: system
-        types: [python]
-        args:
-          [
-            db_batch
-          ]
+#  - repo: local
+#    hooks:
+#      - id: pylint
+#        name: pylint
+#        entry: uv run pylint
+#        language: system
+#        types: [python]
+#        args:
+#          [
+#            db_batch
+#          ]
